2009-08-05  Szabo Carol  <carol.szabo@nokia.com>

Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=27942
        Form Reset does not work per w3c standard when single selection
        SELECT element has more than one option marked as selected.

        * fast/forms/select-reset-multiple-selections-4-single-selection-expected.txt: Added.
        * fast/forms/select-reset-multiple-selections-4-single-selection.html: Added.

2009-08-05  Szabo Carol  <carol.szabo@nokia.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=27942

        Test: fast/forms/select-reset-multiple-selections-4-single-selection.html

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::reset):
           Added HTML 4.01 compliant handling of broken webpages that
           specify more than one selected option for single selection SELECT
           element, in a manner that emulates Firefox and is similar to IE 7

Canonical link: https://commits.webkit.org/38412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46806 268f45cc-cd09-0410-ab3c-d52691b4dbfc